--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="fabtextone">Create NearBy Post</string>
     <string name="fabtexttwo">Create Interest and Hobby Based Post</string>
     <string name="fabtextthree">Ask for the identification of mysterious objects</string>
+    <string name="anonymous">Anonymous</string>
 </resources>
