--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="fabtextthree">Ask for the identification of mysterious objects</string>
     <string name="anonymous">Anonymous</string>
     <string name="logout">Logout</string>
+    <string name="updateprofiletitle">Update Profile</string>
 </resources>
